--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<p>hello my home page</p>
+<!DOCTYPE html>
+<html lang = "ja">
+  <head>
+    <meta charset="utf-8">
+    <title>年賀状をどうぞ</title>
+  </head>
+  <body>
+    <p style="position:absolute; top:50%; left:80%">
+      <img src = "">
+    </p>
+  </body>
