--- a/index.html
+++ b/index.html
@@ -5,7 +5,5 @@
     <title>年賀状をどうぞ</title>
   </head>
   <body>
-    <p style="position:absolute; top:50%; left:80%">
-      <img src = "./S__44613634.jpg">
-    </p>
+   <a href = "./Nenngajyou.html">年賀状はこちら</a>
   </body>
