--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
     <title>年賀状をどうぞ</title>
   </head>
   <body>
-   <a href = "./Nenngajyou.html">年賀状はこちら</a>
+   <a href = "./Nengajyou.html">年賀状はこちら</a>
   </body>
