--- a/Nengajyou.html
+++ b/Nengajyou.html
@@ -6,6 +6,6 @@
     <link rel = "stylesheet" href="Nengajyo.css">
   </head>
   <body>
-    
+    <img src="./nengajo-2023-005.jpg">
   </body>
 </html>
