--- a/Nengajyou.html
+++ b/Nengajyou.html
@@ -6,6 +6,7 @@
     <link rel = "stylesheet" href="Nengajyo.css">
   </head>
   <body>
-    <img src="./nengajo-2023-005.jpg">
+    <img src="./nengajo-2023-005.jpg" 
+         alt = "年賀状（フリーのものを使用）" width="50%" height="50%">
   </body>
 </html>
