--- a/Nengajyou.html
+++ b/Nengajyou.html
@@ -6,7 +6,9 @@
     <link rel = "stylesheet" href="Nengajyo.css">
   </head>
   <body>
-    <img src="./nengajo-2023-005.jpg" 
-         alt = "年賀状（フリーのものを使用）" width="50%" height="50%">
+    <div style="text-align:center">
+      <img src="./nengajo-2023-005.jpg" 
+           alt = "年賀状（フリーのものを使用）" width="50%" height="50%">
+    </div>
   </body>
 </html>
