--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
     <title>年賀状をどうぞ</title>
   </head>
   <body>
-   <a href = "./Nengajyou.html"　style="text-align:center">年賀状はこちら</a>
+   <p style="text-align:center"><a href = "./Nengajyou.html">年賀状はこちら</a></p>
   </body>
