--- a/index.html
+++ b/index.html
@@ -3,38 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>年賀状をどうぞ</title>
+    <link rel="stylesheet" href="./index.css">
   </head>
   <body>
    <p style="text-align:center" style="vertical-align:middle"><a href = "./Nengajyou.html">年賀状はこちら</a></p>
-   <p>　　　　　　　　 　 　 　 　 '　　　 　　　+　　 　 　 　 　 十
-　　　　　　 ＿　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　 _,.. -‐''"~￣ﾉ
-　 　 　 ／,二-L__　　　　　 ' 　　　　　　　　　　　　　　　　　　　　　 　 __,,.. -‐'''"´　_,,.､-ｧ''"~)
-　　　　{　 冖＜- ∟_　 　　 　 　 　 　 ＋ 　 　　　　　　＋　　 ,､‐'''"´　　 _,..､-‐'乙-‐_'二イ
-　　　　 ＼　 ⌒ごﾞ'-┴､ '　　　　　　　 　 　 　 　 　 　 　 　 ／　　_,.ィ孑'___∠-‐く -‐く_／
-　　　　　　ヽ　 !　'")二'ﾕ、　　　　　　　　　 　 　 　 　 　 ／　　／´ 了__,.ィ´__,∠-＜イ
-　　　　　　　ｌ　{　　ソﾞ' ｰ<　　　　 +　　　　　　　　　十 /　 　ノ-‐づ､　'´_ノ-‐''"´,_,／
-　 　 　 　 　 ｌ　!　 ´ﾌつ::ｭ.)　　　　　　　 　 　 　 　 　 /　　 , ‐'フ´-ノ　'´_>‐''"´_ノ
-　 ,　　　 　'　|　　,' ￢ﾍニ ヽ-ｭ.＿　　　　　　 　 　 ／　　　　　_,. - '´／ ,∠-''"
-　　　　　　　｜　,' 　¨! ム ^) ⌒>‐'⌒)　　　　＋／　 　jﾉﾉ／´　　'ﾌ_,／　ｱ
-　　　　　　　 |　　　'７　｀っ<＾ 'ン⌒'_｀ﾆ=-―-/ 　 　／"´,っ ‐､／´‐'_,xく
-　　　 　 　 　|　 ｉ　　　　'´ ,ィジ＞'´　　　　　/　 　 / 人　) イ　　-‐　　_ノ
-　 　 　 　 ＋| 　丶.: .: .: ,;〃／　　　　　 　／　　　/う _六 ,'ぅ 丿- '''"´丿
-+　　　　 　 　＼　　　　　 /　 　 　 　 　 / 　 　 ,ノ､,) -'　　　--┬ '''"´
-　　　 　 　 　 　 `ｰ-ー プ　´´' //／　〈　 ､ヾ｀,"'' 　 -‐'ﾞ ,.ﾆ-‐<　　　　　　X＾}
-　　　　　　　　　　　　 / 　 　 　 /／´ 　,ゝ　｀ﾐ､/ ,ｨ彡 　/＼ヽ、ヽ、　　 　 {_ノ
-　　　　　　 　 　 　 　 | 　　 　,　/ﾆ._''",,ノ　　　｀>!´彳　〈､_入_,ト､{,,ヽ
-　　　　　　　　　十　　',　　仭 丿　　｀"ァｰ--イ ｛　 ; 　 ﾐ､､x{._,入,入 ＼
-＋　　　　　　　 　　　　(ﾕうァ'′　 ＿ ;彡 ; ' ノ　 } ,.'　 r'Vハ｛.￤｛￤{　!}
-　　　　　　　 　 　 　 　 ∨`′　 〈ス九ﾍ}jtﾒ　　_爻ヾf`　ヽ._,火_,火_/`''′
-　　　　　　　　　　　　　　　　　 　 (と!i｀×､_ _rﾀ､SpY
-　　　　　　　　　　　　　　　　 　　　/ 　　　 └「 /ﾞ>c'
-　　　　　　　　　ノﾒ,　　　　　　　　/　丶 ノ　　{人トｲ　　　　　　　　　　　　　　　　,Ｊ、
-　　　 　 　 　 （_,／ 　 　 　 　 　 /　 'Ｚ レ冂　　　/　　　　　　　　　　 　 　 　 　 )　 }
-　　　　　　　　　　　　　　　　 　 /　　 へ ⊥__, 　 /　 　 ﾄ､　 　 　 　 　 　 　 　 （_,,ノ
-　　　　　　　　　　　　　　 　 　 /　 ＿ｊ＿　　　　/　　　｛_ﾉ
-　　　　　　　　　　　　　 　 　 /　　ニ太ニ　　　/
-　　　　　　　　　　　　　　　 /_　　／|三|＼ 　 /
-　　　　　　　　　　　　　　　　 ｀'ｰ-､__　 　　　/
-　　　　　　　　　　　　　　　　　　　　　｀'ｰ-､/
-     </p>
+    
   </body>
