--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
   </head>
   <body>
    <p style="text-align:center" style="vertical-align:middle"><a href = "./Nengajyou.html">年賀状はこちら</a></p>
-    
+   <div class="AAFont-pre">
+    | 　 　 |＼|／　|　　　　　｜ 　　｜
+    | ∧ ∧  |/⌒ヽ、| ∧＿∧ | ∧∧ |
+    |(,,ﾟДﾟ)||,,ﾟ Θﾟ）|（； ´Д｀）|(=ﾟωﾟ)|
+   </div>
   </body>
