--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
    <p style="text-align:center" style="vertical-align:middle"><a href = "./Nengajyou.html">年賀状はこちら</a></p>
+   <div class="AAContainer">
    <div class="AAFont-pre">
      　　　　　　　　 　 　 　 　 '　　　 　　　+　　 　 　 　 　 十
 　　　　　　 ＿　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　 _,.. -‐''"~￣ﾉ
@@ -38,5 +39,6 @@
 　　　　　　　　　　　　　　　 /_　　／|三|＼ 　 /
 　　　　　　　　　　　　　　　　 ｀'ｰ-､__　 　　　/
 　　　　　　　　　　　　　　　　　　　　　｀'ｰ-､/
+   </div>
    </div>
   </body>
