--- a/index.html
+++ b/index.html
@@ -9,21 +9,14 @@
    <p style="text-align:center" style="vertical-align:middle"><a href = "./Nengajyou.html">年賀状はこちら</a></p>
    <div class="AAContainer">
     <div class="kadomatsu">
-　　　　　　　 /＾ヽ,
-　　　　　　　 |　　|
-　　　　　 /＾ヽ 　 !/＾ヽ
-　　　　　 |　　|｀´,|　　|
-　　.　 　 卜_/i＿卜_/i
-　　　　　 |＿_| 　 |＿,|
-　　　　　 | 　 |＿_|　 ,|
-　　　　　○　,|　 ,|￣○
-　　　 ○●○|―,|○●○
-　　　／○○⌒〈＼○○＼
-　　/／|⌒!／＾＼|...＼.|⌒ヽi
-　　　　.|l|l|l||l||l||l||l||l|l||l|l|
-　　　　 |三三三三三三|
-　　　　./l|/l|l|||l|l|l||l|l||ヽl|ゝ、
-　　　　＼＿_|＿_|＿__|ー゛      
+　　　　　　.ｒ
+　　　　 　.○
+　　　　 (￣￣)
+　　　γ~（,,ﾟДﾟ）
+　　　（ (/＿＿　）つ
+　　|￣￣＼／￣￣|
+　　~|￣￣￣￣￣|~
+　　　￣~U~U￣￣
     </div>
     <div class="AAFont-pre">
      　　　　　　　　 　 　 　 　 '　　　 　　　+　　 　 　 　 　 十
