--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
    <p style="text-align:center" style="vertical-align:middle"><a href = "./Nengajyou.html">年賀状はこちら</a></p>
    <div class="AAContainer">
     <div class="kadomatsu">
-　　　　　　.ｒ
-　　　　 　.○
-　　　　 (￣￣)
-　　　γ~（,,ﾟДﾟ）
-　　　（ (/＿＿　）つ
-　　|￣￣＼／￣￣|
-　　~|￣￣￣￣￣|~
-　　　￣~U~U￣￣
+　　　　　　　 /＾ヽ,
+　　　　　　　 |　　|
+　　　　　 /＾ヽ 　 !/＾ヽ
+　　　　　 |　　|｀´,|　　|
+　　.　 　 卜_/i＿卜_/i
+　　　　　 |＿_| 　 |＿,|
+　　　　　 | 　 |＿_|　 ,|
+　　　　　○　,|　 ,|￣○
+　　　 ○●○|―,|○●○　　　　　　　　　　 .,＿/⌒ヽ＿、
+　　　／○○⌒〈＼○○＼　　　　　　　　　（　　＼|／　　）
+　　/／|⌒!／＾＼|...＼.|⌒ヽi　　　　　　　　　`'¨¨＾＾＾¨¨｀´
+　　　　.|l|l|l||l||l||l||l||l|l||l|l|　　　　　　,＿/⌒ヽ＿、　　 ,＿/⌒ヽ＿、
+　　　　 |三三三三三三|　　　　　（　　＼|／　　）　（　　＼|／　　）
+　　　　./l|/l|l|||l|l|l||l|l||ヽl|ゝ、　　 .　`'¨¨＾＾＾¨¨｀´　　`'¨¨＾＾＾¨¨｀´
+　　　　＼＿_|＿_|＿__|ー゛
     </div>
     <div class="AAFont-pre">
      　　　　　　　　 　 　 　 　 '　　　 　　　+　　 　 　 　 　 十
