--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 　　　　　 |＿_| 　 |＿,|
 　　　　　 | 　 |＿_|　 ,|
 　　　　　○　,|　 ,|￣○
-　　　 ○●○|―,|○●○　　　　　　　　　　 .,＿/⌒ヽ＿、
-　　　／○○⌒〈＼○○＼　　　　　　　　　（　　＼|／　　）
-　　/／|⌒!／＾＼|...＼.|⌒ヽi　　　　　　　　　`'¨¨＾＾＾¨¨｀´
-　　　　.|l|l|l||l||l||l||l||l|l||l|l|　　　　　　,＿/⌒ヽ＿、　　 ,＿/⌒ヽ＿、
-　　　　 |三三三三三三|　　　　　（　　＼|／　　）　（　　＼|／　　）
-　　　　./l|/l|l|||l|l|l||l|l||ヽl|ゝ、　　 .　`'¨¨＾＾＾¨¨｀´　　`'¨¨＾＾＾¨¨｀´
+　　　 ○●○|―,|○●○　　　　　　　　　　 
+　　　／○○⌒〈＼○○＼　　　　　　　　　
+　　/／|⌒!／＾＼|...＼.|⌒ヽi　　　　　　　　　
+　　　　.|l|l|l||l||l||l||l||l|l||l|l|　　　　　　
+　　　　 |三三三三三三|　　　　　
+　　　　./l|/l|l|||l|l|l||l|l||ヽl|ゝ、　　 
 　　　　＼＿_|＿_|＿__|ー゛
     </div>
     <div class="AAFont-pre">
