--- a/index.html
+++ b/index.html
@@ -57,5 +57,22 @@
 　　　　　　　　　　　　　　　　 ｀'ｰ-､__　 　　　/
 　　　　　　　　　　　　　　　　　　　　　｀'ｰ-､/
      </div>
+   　<div class="kadomatsu">
+　　　　　　　 /＾ヽ,
+　　　　　　　 |　　|
+　　　　　 /＾ヽ 　 !/＾ヽ
+　　　　　 |　　|｀´,|　　|
+　　　 　 卜_/i＿卜_/i
+　　　　　 |＿_| 　 |＿,|
+　　　　　 | 　 |＿_|　 ,|
+　　　　　○　,|　 ,|￣○
+　　　 ○●○|―,|○●○　　　　　　　　　　 
+　　　／○○⌒〈＼○○＼　　　　　　　　　
+　　/／|⌒!／＾＼|...＼.|⌒ヽi　　　　　　　　　
+　　　　.|l|l|l||l||l||l||l||l|l||l|l|　　　　　　
+　　　　 |三三三三三三|　　　　　
+　　　　./l|/l|l|||l|l|l||l|l||ヽl|ゝ、　　 
+　　　　＼＿_|＿_|＿__|ー゛
+    </div>
    </div>
   </body>
