--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
    <p style="text-align:center" style="vertical-align:middle"><a href = "./Nengajyou.html">年賀状はこちら</a></p>
    <div class="AAContainer">
-    <div class="kadomatsu">
+    <div class="kadomatsu-left">
 　　　　　　　 /＾ヽ,
 　　　　　　　 |　　|
 　　　　　 /＾ヽ 　 !/＾ヽ
@@ -57,7 +57,7 @@
 　　　　　　　　　　　　　　　　 ｀'ｰ-､__　 　　　/
 　　　　　　　　　　　　　　　　　　　　　｀'ｰ-､/
      </div>
-   　<div class="kadomatsu">
+   　<div class="kadomatsu-right">
 　　　　　　　 /＾ヽ,
 　　　　　　　 |　　|
 　　　　　 /＾ヽ 　 !/＾ヽ
