--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 　　　　＼＿_|＿_|＿__|ー゛
     </div>
     <div class="AAFont-pre">
+      <div class="AA">
      　　　　　　　　 　 　 　 　 '　　　 　　　+　　 　 　 　 　 十
 　　　　　　 ＿　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　 _,.. -‐''"~￣ﾉ
 　 　 　 ／,二-L__　　　　　 ' 　　　　　　　　　　　　　　　　　　　　　 　 __,,.. -‐'''"´　_,,.､-ｧ''"~)
@@ -56,6 +57,7 @@
 　　　　　　　　　　　　　　　 /_　　／|三|＼ 　 /
 　　　　　　　　　　　　　　　　 ｀'ｰ-､__　 　　　/
 　　　　　　　　　　　　　　　　　　　　　｀'ｰ-､/
+      </div>
      </div>
    　<div class="kadomatsu-right">
 　　　　　　　 /＾ヽ,
